--- a/Sims4.SignalR/PolyhydraGames.Sims4.Bridge.csproj
+++ b/Sims4.SignalR/PolyhydraGames.Sims4.Bridge.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.10" />
+    <PackageReference Include="PolyhydraGames.Sims4.Core" Version="1.0.0.2" />
   </ItemGroup>
 
 </Project>
