--- a/Sims4.SignalR/appsettings.json
+++ b/Sims4.SignalR/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "WebKey": "6cc7753e-8c82-4255-842b-b86b1bc36617",
+  "HubUrl": "https://dev.channelcheevos.com/simshub"
+
 }
